--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,21 +12,24 @@ jobs:
         with:
           token: ${{ secrets.LINKIT }}
 
-      - name: Download Artifacts from ExtremeKernel
+      - name: Download Artifacts using GH CLI
+        env:
+          GH_TOKEN: ${{ secrets.LINKIT }}
         run: |
           mkdir -p kernels
-          # Artifact IDs from your links
-          ids=("5438080322" "5438080687" "5438082956" "5438089782" "5438091374")
-          names=("D2s" "D1" "D1xks" "D2x" "D2xks")
+          # Mapping Names to Artifact IDs
+          declare -A artifacts=( 
+            ["D2s"]="5438080322" 
+            ["D1"]="5438080687" 
+            ["D1xks"]="5438082956" 
+            ["D2x"]="5438089782" 
+            ["D2xks"]="5438091374" 
+          )
 
-          for i in "${!ids[@]}"; do
-            echo "Downloading ${names[$i]}..."
-            curl -L \
-              -H "Authorization: Bearer ${{ secrets.LINKIT }}" \
-              -H "Accept: application/vnd.github+json" \
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              -o "kernels/${names[$i]}.zip" \
-              "https://api.github.com/repos/Link2mem/ExtremeKernel/actions/artifacts/${ids[$i]}/zip"
+          for name in "${!artifacts[@]}"; do
+            echo "Downloading $name (ID: ${artifacts[$name]})..."
+            gh api -H "Accept: application/vnd.github+json" \
+              /repos/Link2mem/ExtremeKernel/actions/artifacts/${artifacts[$name]}/zip > "kernels/$name.zip"
           done
 
       - name: Commit and Push Files
@@ -34,5 +37,9 @@ jobs:
           git config --global user.name "Link2mem"
           git config --global user.email "Were.aksle@gmail.com"
           git add kernels/
-          git commit -m "Add LinkitKernel Clean Edition binaries"
-          git push origin main
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Add LinkitKernel binaries to permanent storage"
+            git push origin main
+          fi
